--- a/Latex/references.bib
+++ b/Latex/references.bib
@@ -1,58 +1,29 @@
-@book{adams1995hitchhiker,
-  title={The Hitchhiker's Guide to the Galaxy},
-  author={Adams, D.},
-  isbn={9781417642595},
-  url={http://books.google.com/books?id=W-xMPgAACAAJ},
-  year={1995},
-  publisher={San Val}
-}
-@misc{884argon,
-  title = {{National Valve Museum} 884},
-  howpublished = {\url{http://www.r-type.org/exhib/aaa0304.htm}},
-  note = {Accessed: 2017-09-20},
-  author={Wyatt, Allan},
+@online{pict:cable,
+ author  = "Wikimedia Commons",
+ title   = "Cross-sectional view of a coaxial cable",
+ year    = "2012",
+ urlseen = "10-15-17",
+ url     = "https://upload.wikimedia.org/wikipedia/commons/1/14/Coaxial_cable.JPG",
+ note    = "File: \ttfamily{Coaxial_cable.JPG}",
 }
 
-@article{IonizationPotentialMain,
-author = {L. C. Van Atta and J. E. Meade and E. S. Lamar},
-title = {Measurement of an Ionization Potential},
-journal = {American Journal of Physics},
-volume = {8},
-number = {5},
-pages = {322-322},
-year = {1940},
-doi = {10.1119/1.1991599},
-
-URL = { 
-        http://dx.doi.org/10.1119/1.1991599
-    
-},
-eprint = { 
-        http://dx.doi.org/10.1119/1.1991599
-    
+@inbook{feynman,
+  booktitle={The Feynman Lectures on Physics, Vol. II: The New Millennium Edition: Mainly Electromagnetism and Matter},
+ title={Waveguides: The transmission Line},
+  author={Feynman, R.P. and Leighton, R.B. and Sands, M.},
+ chapter={24-1},
+  isbn={9780465024940},
+  lccn={2010938208},
+  series={Feynman Lectures on Physics},
+  url={https://books.google.ca/books?id=hlRhwGK40fgC},
+  year={2011},
+  publisher={Basic Books}
 }
 
+@article{Brown,
+  title = {Electronics},
+  jounal={Wiley},
+  pages={422-424},
+  author={Brown, T.B.},
+  year={1954},
 }
-@article{IonizationPotentialMercury,
-author = {Trevor R. Cuykendall},
-title = {An Advanced Laboratory Experiment on the Ionization Potential of Mercury},
-journal = {American Journal of Physics},
-volume = {4},
-number = {2},
-pages = {93-95},
-year = {1936},
-doi = {10.1119/1.1999079},
-
-URL = { 
-        http://dx.doi.org/10.1119/1.1999079
-    
-},
-eprint = { 
-        http://dx.doi.org/10.1119/1.1999079
-    
-}
-
-}
-
-
-
