--- a/Latex/report_details.tex
+++ b/Latex/report_details.tex
@@ -1,6 +1,6 @@
-\newcommand{\ExperimentTitle}{Thermionic Emission of Electrons}
-\newcommand{\ExperimentSubtitle}{Experiment \#4}
-\newcommand{\HeaderExperimentTitle}{Thermionic Emission}
+\newcommand{\ExperimentTitle}{Waves and Pulses in Cables}
+\newcommand{\ExperimentSubtitle}{Experiment \#7}
+\newcommand{\HeaderExperimentTitle}{Cables}
 
 \newcommand{\CourseCode}{PHYS460A}
 \newcommand{\CourseSection}{Section 001}
@@ -16,5 +16,5 @@
 \newcommand{\UniversityName}{University of Waterloo}
 \newcommand{\UniversityLocation}{Waterloo, ON}
 
-\newcommand{\DatePerformed}{September 25, 2017}
-\newcommand{\DateSubmitted}{October 9, 2017}
+\newcommand{\DatePerformed}{October 15, 2017}
+\newcommand{\DateSubmitted}{October 29, 2017}
