--- a/Latex/references.bib
+++ b/Latex/references.bib
@@ -1,10 +1,10 @@
-@online{pict:cable,
+@online{pict_cable,
  author  = "Wikimedia Commons",
  title   = "Cross-sectional view of a coaxial cable",
  year    = "2012",
  urlseen = "10-15-17",
  url     = "https://upload.wikimedia.org/wikipedia/commons/1/14/Coaxial_cable.JPG",
- note    = "File: \ttfamily{Coaxial_cable.JPG}",
+ note    = "File: \ttfamily{Coaxial\_cable.JPG}",
 }
 
 @inbook{feynman,
@@ -22,7 +22,7 @@
 
 @article{Brown,
   title = {Electronics},
-  jounal={Wiley},
+  journal={Wiley},
   pages={422-424},
   author={Brown, T.B.},
   year={1954},
